+ Added: [API] to get all areas inside a claimed chunk Container#getAreasInChunk